--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				<div class="container">
 					<div class="content-wrapper">
 						<section class="main">
-							<div class="main-card">
+							<article class="main-card">
 								<div class="main-card-body">
 									<div class="card-body-img">
 										<img src="images/last-post1.jpg" alt="news">
@@ -141,8 +141,8 @@
 										</div>
 									</article>
 								</div>
-							</div>
-							<div class="main-card">
+							</article>
+							<article class="main-card">
 								<div class="main-card-body">
 									<div class="card-body-img">
 										<img src="images/last-post2.jpg" alt="news">
@@ -165,8 +165,8 @@
 										</div>
 									</article>
 								</div>
-							</div>
-							<div class="main-card">
+							</article>
+							<article class="main-card">
 								<div class="main-card-body">
 									<div class="card-body-img">
 										<img src="images/last-post3.jpg" alt="news">
@@ -188,8 +188,8 @@
 										</div>
 									</article>
 								</div>
-							</div>
-							<div class="main-card">
+							</article>
+							<article class="main-card">
 								<div class="main-card-body">
 									<div class="card-body-img">
 										<img src="images/last-post4.jpg" alt="news">
@@ -211,8 +211,8 @@
 										</div>
 									</article>
 								</div>
-							</div>
-							<div class="main-card">
+							</article>
+							<article class="main-card">
 								<div class="main-card-body">
 									<div class="card-body-img">
 										<img src="images/last-post5.jpg" alt="news">
@@ -236,7 +236,7 @@
 										</div>
 									</article>
 								</div>
-							</div>
+							</article>
 						</section>
 						<aside class="aside">
 							<section class="new-posts">
